attempting to fix title on mobile view

--- a/assets/themes/ben/css/style.css
+++ b/assets/themes/ben/css/style.css
@@ -18,6 +18,12 @@ body {
     color: white;
 }
 
+@media screen and (max-width: 980px) {
+    .img-overlay {
+        font-size: 16px;
+    }
+}
+
 .content {
     max-width: 40em;
     margin-left: auto;
@@ -109,13 +115,10 @@ a {
     }
 }
 
-
-
 .post-date {
     color: #888888;
     font-size: 18px;
 }
-
 
 /* Custom container */
 .container-narrow {
